# phemto_simulations

./: .gitignore  README.txt
PHEMTO/jose/: Prep_revan_Path_4L.py
PHEMTO/miguel/: Prep_revan_Path_4L.py  runRevan.sh
PHEMTO/new/: Prep_cosima_Path_4L.py  Prep_revan_Path_4L.py  analyseTra.py  runAll.sh  runCosima.sh  runCosimaconfig3.sh  runRevan.sh  runRevanconfig1.sh  runRevanconfig2.sh  runRevanconfig3.sh
PHEMTO/old/: Background.source  CdTedetector.det  CrabOnly.source  Materials_v.geo  Mono.source  si.geo
PHEMTO/reproduce_old/: PHEMTO.geo.setup
PHEMTO/v1.1/: Prep_cosima_Path_4L.py
megalib/: notesMEGALib.txt
megalib/analysis_overall/: .gitignore  PHEMTO_sensitivity_MEGAlib_v1.1.odp  Sensibilite PHEMTO.1.1-Jose.xlsx  \  parquet_to_csv.py  parse_TraToParquet.py  parse_TraToT3pa.py  plot_instrument_sensitivity.py
megalib/analysis_overall/polarimetry/manalysis/compton_generator/: .gitignore  compton_equations.py  compton_generator.py  pyproject.toml  readme.md  requirements.txt
megalib/analysis_overall/polarimetry/manalysis/compton_generator/compton_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
megalib/detectors/: ACD.det  CdTe4x4detector.det  CdTe5x5detector.det  CdTe6x6detector.det  CdTe7x7detector.det  CdTe8x8detector.det  CdTe9x9detector.det  CdTedetector.det
megalib/instruments/: PHEMTO_config2.geo.setup  PHEMTO_config4.geo.setup  PHEMTO_config4x4_0.5cm.geo.setup  PHEMTO_config4x4_1.5cm.geo.setup  PHEMTO_config4x4_10cm.geo.setup  PHEMTO_config4x4_1cm.geo.setup  PHEMTO_config5.geo.setup  (+116 more)
miguel/: Prep_cosima_Path_4L.py
(+592 files in other folders)
